kubernetes/nico-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nico-svc
spec:
  selector:
    app: nico-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
